--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   dots_indicator:  
   intl: 
   cloud_firestore: 
+  equatable: ^2.0.5
+  firebase_auth: ^4.6.3
+  firebase_core: ^2.14.0
 
 dev_dependencies:
   flutter_test:
